# plot4d

./: .gitignore  LICENSE  README.md  pyproject.toml
src/plot4d/: __init__.py  plotter.py
src/plot4d/.ipynb_checkpoints/: plotter-checkpoint.py
tests/: dev_test.ipynb  example.ipynb
tests/.ipynb_checkpoints/: dev_test-checkpoint.ipynb
